# vulkan-tests

./: .gitignore  CMakeLists.txt  README.md  VulkanTestApplication.cpp  VulkanTestApplication.h  compileShaders.sh  getassets.sh  main.cpp
shader/: compile.sh
shaders/: compile.bat  compile.sh  triangle.frag  triangle.vert
src/: CMakeLists.txt  FileHelpers.cpp  FileHelpers.h  ShaderCompiler.cpp  ShaderCompiler.h  VulkanTestApplication.cpp  VulkanTestApplication.h  VulkanTestInstanceDevice.cpp  main.cpp
src/file-utils/: FileHelpers.cpp  FileHelpers.h  FileWatcher.cpp  FileWatcher.h
src/glm/: CMakeLists.txt
src/glm/gtc/: matrix_transform.hpp  quaternion.hpp  type_aligned.hpp  type_precision.hpp  type_ptr.hpp
src/glm/gtx/: gradient_paint.hpp  intersect.hpp  io.hpp  io.inl  matrix_query.hpp  norm.hpp  perpendicular.hpp  quaternion.hpp  rotate_vector.hpp  spline.hpp  string_cast.hpp  texture.hpp  transform2.hpp  type_trait.hpp  vector_angle.hpp
src/helpers/: pow2.h
src/shader-loader/: ShaderLoader.cpp  ShaderLoader.h  ShaderUpdater.cpp  ShaderUpdater.h
src/shaders/: compile.sh  triangle.vert
